<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="loading">加载中</string>
    <string name="has_sold">已售</string>
    <string name="evaluation">评价</string>
    <string name="i_want_comment">我要点评</string>
    <string name="detail">详情</string>
    <string name="see_all_comment">查看全部评论</string>
    <string name="market">市场</string>

    <!-- 活动相关 -->
    <string name="event">活动</string>
    <string name="event_list">活动列表</string>

    <!-- 优惠相关 -->
    <string name="youhui_coupon">优惠</string>
    <string name="youhui_coupon_list">优惠券列表</string>

    <!-- 团购相关 -->
    <string name="tuan_gou">团购</string>
    <string name="tuan_gou_detail">团购详情</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods">商品</string>
    <string name="mall">商城</string>
    <string name="buy_right_now">立即购买</string>
    <string name="support_store">商家</string>
    <string name="goods_attribute">套餐内容</string>
    <string name="my_tuan_gou_coupon">我的团购券</string>
    <string name="tuan_gou_coupon_detail">团购券详情</string>
    <string name="tuan_gou_coupon_code">团购券二维码</string>
    <string name="nearby_tuan_gou">附近团购</string>
    <string name="tuan_gou_and_goods">商品</string>

    <!-- 门店相关 -->
    <string name="store_detail">门店详情</string>
    <string name="other_store">其他门店</string>
    <string name="store_brief">门店简介</string>
    <string name="the_suppliers_goods">该商家的商品</string>
    <string name="the_suppliers_youhui">该商家的优惠券</string>
    <string name="suppliers_name_colon">商家名称：</string>
    <string name="suppliers_phone_colon">商家电话：</string>
    <string name="suppliers_address_colon">商家地址：</string>
    <string name="suppliers_introduction">商家介绍</string>
    <string name="please_input_supplier_name">请输入商家名称</string>
    <string name="nearby_store">附近门店</string>
    <string name="store_location">门店位置</string>

    <!-- 首页>>>>>>>>>>>>>>>>>>>>>>>>>> -->
    <string name="recommend_supplier">推荐商家</string>
    <string name="recommend_tuan">推荐团购</string>
    <string name="see_all_tuan">查看全部团购</string>
    <string name="recommend_goods">推荐商品</string>
    <string name="see_all_goods">查看全部商品</string>
    <string name="recommend_youhui">推荐优惠</string>
    <string name="see_all_youhui">查看全部优惠</string>

    <!-- 主界面底部菜单 -->
    <string name="home">首页</string>
    <string name="supplier">商家</string>
    <string name="mine">我的地盘</string>


    <!-- 点击查看更多和收回 -->
    <string name="click_expand">查看更多</string>
    <string name="click_close">点击收回</string>

    <!-- 新增 -->
    <string name="commit">提现</string>
    <string name="text_fenxiao_tui">推广我的小店</string>
    <string name="text_dingdan">本次结算生成一个订单,商品不可单独退款</string>
    <string name="action_settings">Settings</string>
    <string name="store_youhui_text">除详询商家、酒水、特价菜不可用</string>

    <!-- 下拉刷新控件 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <!-- <string name="loading">正在加载...</string> -->
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="three_login_message">第三方账号快速登录</string>

    <!-- 直播 -->
    <string name="live_start">开始直播</string>
    <string name="live_auth">认证颜值</string>
    <!--直播红包-->
    <string name="live_auth_title">完善个人信息，成为认证网红，帮大家活得更有趣</string>
    <string name="live_auth_title_tag">描述一下自己吧，更容易上热门</string>
    <string name="live_auth_img">2-3张一个月内生活照：</string>
    <string name="live_auth_remark">无性别星探会火速勾搭你！放心，我们严禁任何形式的骚扰行为</string>
    <string name="live_auth_tags_hint">描述一下自己吧，并用\",\"隔开</string>

    <string name="red_dialog_title">发红包给粉丝</string>
    <string name="red_type_string">选择类型</string>
    <string name="shop_name">商店名称</string>
    <string name="red_count_string">选择数量</string>
    <string name="red_count_all">全部</string>

    <string name="red_send">发送</string>
    <string name="red_time_countdown">抢红包倒计时</string>
    <string name="pop_share_live">送朋友20钻，如果朋友本场有消费，你可以共享直播收益的5%</string>

</resources>