<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/send_red_dialog"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:backgroundDimEnabled="true"
              android:orientation="vertical"
              android:windowBackground="@color/transparent"
              android:windowIsFloating="true"
              android:windowIsTranslucent="false">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:text="@string/red_dialog_title"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp17"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:text="@string/shop_name"
            android:textColor="@color/text_fenxiao"
            android:textSize="@dimen/sp13"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_40_px2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="2"
            android:background="@color/bg_activity_gray"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/red_type_string"
            android:textColor="@color/text_fenxiao"
            android:textSize="@dimen/sp13"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="2"
            android:background="@color/bg_activity_gray"
            android:gravity="center"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/type_grid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_300dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_40_px2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="2"
            android:background="@color/bg_activity_gray"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/red_count_string"
            android:textColor="@color/text_fenxiao"
            android:textSize="@dimen/sp13"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="2"
            android:background="@color/bg_activity_gray"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_23_px2dp">

        <EditText
            android:id="@+id/red_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/all_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/red_count_all"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp17"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_23_px2dp">

        <Button
            android:id="@+id/send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_send"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp17"/>
    </LinearLayout>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="@dimen/size_80_px2dp"
        android:layout_height="@dimen/size_80_px2dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/circle_cancel"/>
    <!--</LinearLayout>-->

</LinearLayout>