<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/bg_activity_white"
    app:cardCornerRadius="@dimen/dp5"
    app:cardElevation="@dimen/dp8"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp30"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp10"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suppliers_name_colon" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/text_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp30"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp10"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suppliers_phone_colon" />

        <TextView
            android:id="@+id/tv_tel"
            style="@style/text_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp30"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp10"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suppliers_address_colon" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/text_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>